[gd_scene load_steps=4 format=3 uid="uid://dd8nup6cyjgy4"]

[ext_resource type="Script" path="res://ui/menu/pause_menu/pause_menu.gd" id="1_6805y"]
[ext_resource type="Texture2D" uid="uid://dr7btnk1b7ra1" path="res://assets/sprites/menu/menuforestbackground.jpg" id="1_p3kx5"]
[ext_resource type="PackedScene" uid="uid://wkku8p1vo8af" path="res://ui/menu/options_menu/options_menu.tscn" id="3_8x5g5"]

[node name="PauseMenu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6805y")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.376471, 0.376471, 0.376471, 0.670588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p3kx5")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pausado"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContinue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="ButtonOptions" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opções"

[node name="ButtonLeftToMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sair para o menu"

[node name="OptionsMenu" parent="." instance=ExtResource("3_8x5g5")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonLeftToMenu" to="." method="_on_button_left_to_menu_pressed"]
